update course page, resolve #20

--- a/course/templates/course/detail_edit.html
+++ b/course/templates/course/detail_edit.html
@@ -121,7 +121,7 @@
                         <option value="GEC">General Education Core</option>
                         <option value="GED">General Education Distribution</option>
                         <option value="WPEX">Whole Person Education Experiential Learning Modules</option>
-                        <option value="FE">Free Elective</option>
+                        <option value="FE" selected>Free Elective</option>
                     </select>
                 </div>
                 <div class="row">
@@ -133,7 +133,7 @@
                                 <option value="DBM">Division of Business and Management</option>
                                 <option value="DHSS">Division of Humanities and Social Sciences</option>
                                 <option value="DCC">Division of Culture and Creativity</option>
-                                <option value="ALL">All Division</option>
+                                <option value="ALL" selected>All Division</option>
                             </select>
                         </div>
                     </div>
@@ -176,7 +176,7 @@
                                     <option value="ELLS">English Language and Literature Studies</option>
                                     <option value="ALLDHSS">All DHSS Major</option>
                                 </optgroup>
-                                <option value="ALL">ALL Major</option>
+                                <option value="ALL" selected>ALL Major</option>
                             </select>
                         </div>
                     </div>
