--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -140,8 +140,8 @@
             <img src="https://cdn.bootcss.com/open-iconic/1.1.1/svg/chat.svg" class="mr-2 rounded"
                  style="width: 32px; height: 32px;">
             <p class="media-body pb-3 mb-0 lh-125 border-bottom border-gray">
-                <strong class="d-block text-gray-dark">Major/Division</strong>
-                {{ coursedata.course_major }} / {{ coursedata.course_division }}
+                <strong class="d-block text-gray-dark">Division · Major</strong>
+                <label class="badge badge-warning">{{ coursedata.course_division }}</label> · <label class="badge badge-primary">{{ coursedata.course_major }}</label>
             </p>
         </div>
         <div class="media text-muted pt-3">
