--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -106,6 +106,7 @@
         <div class="lh-100" style="width: 100%;">
             <div class="d-flex justify-content-between align-items-center">
                 <h1 class="mb-0 text-white lh-100">{{ coursedata.course_code | upper }}: {{ coursedata.course_name_en }}</h1>
+                <h4 class="mb-0 text-white lh-100">hits: {{ coursedata.view_times }}</h4>
             </div>
             <h2 class="text-white" style="margin-bottom: 0;">{{ coursedata.course_name_cn }}</h2>
         </div>
