--- a/course/templates/course/signup.html
+++ b/course/templates/course/signup.html
@@ -64,17 +64,24 @@
                         {% csrf_token %}
                         <div class="form-group">
                             <input type="email" class="form-control" placeholder="Email" name="email" id="id_email">
+                            <label id="id_email_label"></label>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Username" name="username" id="id_username">
+                            <input type="text" class="form-control" placeholder="Username" name="username"
+                                   id="id_username">
+                            <label id="id_username_label"></label>
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control" placeholder="Password" name="password">
+                            <input type="password" class="form-control" placeholder="Password" name="password"
+                                   id="id_password">
+                            <label id="id_password_label"></label>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Invitation code" name="invitationcode" id="id_invitationcode">
+                            <input type="text" class="form-control" placeholder="Invitation code" name="invitationcode"
+                                   id="id_invitationcode">
+                            <label id="id_invitationcode_label"></label>
                         </div>
-                        <button type="submit" class="btn btn-success">Sign up</button>
+                        <button type="submit" class="btn btn-success" id="submit_btn">Sign up</button>
                         <a href="{% url 'home_page' %}" class="btn btn-primary">Back</a>
                     </form>
                 </div>
@@ -98,70 +105,117 @@
         </div>
     </div>
 </div>
-        <!-- Bootstrap core JavaScript
-        ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-        {% load static %}
-        <script src="{% static "js/popper.min.js" %}"></script>
-        <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-        <script>
-            $("#id_email").change(function (){
-                var email = $(this).val();
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+{% load static %}
+<script src="{% static "js/popper.min.js" %}"></script>
+<script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="https://cdn.bootcss.com/limonte-sweetalert2/7.11.0/sweetalert2.all.min.js"></script>
+<script src="https://cdn.bootcss.com/core-js/2.4.1/core.js"></script>
+<script>
+    function isEmail(email) {
+        var regex = /^[A-Za-z0-9\u4e00-\u9fa5]+@[a-zA-Z0-9_-]+(\.[a-zA-Z0-9_-]+)+$/;
+        return regex.test(email);
+    }
 
-                $.ajax({
-                    url: '{% url 'validate_email' %}',
-                    data:{
-                        'email': email
-                    },
-                    dataType: 'json',
-                    success: function (data){
-                        if (data.is_taken){
-                            alert("A user with this email already exists.")
-                        }else{
-                            alert("This email is ready to go.")
-                        }
+    function isPasswordValid(password) {
+        var regex =/^(?!([a-zA-Z]+|\d+)$)[a-zA-Z\d]{8,20}$/;
+        return regex.test(password)
+    }
+
+    $("#id_email").change(function () {
+        var email = $(this).val();
+
+        $.ajax({
+            url: '{% url 'validate_email' %}',
+            data: {
+                'email': email
+            },
+            dataType: 'json',
+            success: function (data) {
+                if (data.is_taken) {
+                    $("#id_email_label").html('<span class="text-danger">A user with this email already exists.</span>');
+                    $("#id_email").removeClass('is-valid');
+                    $("#id_email").addClass('is-invalid');
+                } else {
+                    if(isEmail($("#id_email").val())){
+                        $("#id_email_label").html('<span class="text-success">This email is ready to go.</span>');
+                        $("#id_email").removeClass('is-invalid');
+                        $("#id_email").addClass('is-valid');
+                    }else{
+                        $("#id_email_label").html('<span class="text-danger">Wrong email format.</span>');
+                        $("#id_email").removeClass('is-valid');
+                        $("#id_email").addClass('is-invalid');
                     }
-                });
-            });
+                }
+            }
+        });
+    });
 
-            $("#id_username").change(function (){
-                var username = $(this).val();
+    $("#id_username").change(function () {
+        var username = $(this).val();
 
-                $.ajax({
-                    url: '{% url 'validate_user' %}',
-                    data:{
-                        'username': username
-                    },
-                    dataType: 'json',
-                    success: function (data){
-                        if (data.is_taken){
-                            alert("This username already exists.")
-                        }else{
-                            alert("This username is ready to go.")
-                        }
+        $.ajax({
+            url: '{% url 'validate_user' %}',
+            data: {
+                'username': username
+            },
+            dataType: 'json',
+            success: function (data) {
+                if (data.is_taken) {
+                    $("#id_username_label").html('<span class="text-danger">This username already exists.</span>');
+                    $("#id_username").removeClass('is-valid');
+                    $("#id_username").addClass('is-invalid');
+                } else {
+                    if($("#id_username").val() != ''){
+                        $("#id_username_label").html('<span class="text-success">This username is ready to go.</span>');
+                        $("#id_username").removeClass('is-invalid');
+                        $("#id_username").addClass('is-valid');
+                    }else{
+                        $("#id_username_label").html('<span class="text-danger">Username cannot be empty.</span>');
+                        $("#id_username").removeClass('is-valid');
+                        $("#id_username").addClass('is-invalid');
                     }
-                });
-            });
+                }
+            }
+        });
+    });
 
-            $("#id_invitationcode").change(function (){
-                var invitationcode = $(this).val();
+    $("#id_invitationcode").change(function () {
+        var invitationcode = $(this).val();
 
-                $.ajax({
-                    url: '{% url 'validate_invitationcode' %}',
-                    data:{
-                        'invitationcode': invitationcode
-                    },
-                    dataType: 'json',
-                    success: function (data){
-                        if (data.is_valid){
-                            alert("This Invitation Code is valid.")
-                        }else{
-                            alert("This Invitation Code is invalid.")
-                        }
-                    }
-                });
-            });
-        </script>
+        $.ajax({
+            url: '{% url 'validate_invitationcode' %}',
+            data: {
+                'invitationcode': invitationcode
+            },
+            dataType: 'json',
+            success: function (data) {
+                if (data.is_valid) {
+                    $("#id_invitationcode_label").html('<span class="text-success">This Invitation Code is valid.</span>');
+                    $("#id_invitationcodee").removeClass('is-invalid');
+                    $("#id_invitationcode").addClass('is-valid');
+                } else {
+                    $("#id_invitationcode_label").html('<span class="text-danger">This Invitation Code is invalid.</span>');
+                    $("#id_invitationcode").removeClass('is-valid');
+                    $("#id_invitationcode").addClass('is-invalid');
+                }
+            }
+        });
+    });
+    $("#id_password").change(function (){
+        if(isPasswordValid($("#id_password").val())){
+            $("#id_password").removeClass('is-invalid');
+            $("#id_password").addClass('is-valid');
+            $("#id_password_label").html('<span class="text-success">The password is in the correct format.</span>');
+        }else{
+            $("#id_password").removeClass('is-valid');
+            $("#id_password").addClass('is-invalid');
+            $("#id_password_label").html('<span class="text-danger">Wrong password format. The password length is 8-20, you need to include both numbers and letters.</span>');
+        }
+    });
+</script>
 </body>
 </html>
