Strict registration information, resolve #22

--- a/course/templates/course/signup.html
+++ b/course/templates/course/signup.html
@@ -60,7 +60,7 @@
                 <div class="card-body">
                     <h4 title="card-title">Signup to uicCourse</h4>
                     <br>
-                    <form action="{% url 'signup_receiver' %}" method="post">
+                    <form action="{% url 'signup_receiver' %}" method="post" id="id_signup_form">
                         {% csrf_token %}
                         <div class="form-group">
                             <input type="email" class="form-control" placeholder="Email" name="email" id="id_email">
@@ -81,7 +81,7 @@
                                    id="id_invitationcode">
                             <label id="id_invitationcode_label"></label>
                         </div>
-                        <button type="submit" class="btn btn-success" id="submit_btn">Sign up</button>
+                        <button type="submit" class="btn btn-success" id="submit_btn" disabled="disabled">Sign up</button>
                         <a href="{% url 'home_page' %}" class="btn btn-primary">Back</a>
                     </form>
                 </div>
@@ -136,18 +136,18 @@
             dataType: 'json',
             success: function (data) {
                 if (data.is_taken) {
-                    $("#id_email_label").html('<span class="text-danger">A user with this email already exists.</span>');
                     $("#id_email").removeClass('is-valid');
                     $("#id_email").addClass('is-invalid');
+                    $("#id_email_label").html('<span class="text-danger">A user with this email already exists.</span>');
                 } else {
                     if(isEmail($("#id_email").val())){
-                        $("#id_email_label").html('<span class="text-success">This email is ready to go.</span>');
                         $("#id_email").removeClass('is-invalid');
                         $("#id_email").addClass('is-valid');
+                        $("#id_email_label").html('<span class="text-success">This email is ready to go.</span>');
                     }else{
-                        $("#id_email_label").html('<span class="text-danger">Wrong email format.</span>');
                         $("#id_email").removeClass('is-valid');
                         $("#id_email").addClass('is-invalid');
+                        $("#id_email_label").html('<span class="text-danger">Wrong email format.</span>');
                     }
                 }
             }
@@ -165,18 +165,18 @@
             dataType: 'json',
             success: function (data) {
                 if (data.is_taken) {
-                    $("#id_username_label").html('<span class="text-danger">This username already exists.</span>');
                     $("#id_username").removeClass('is-valid');
                     $("#id_username").addClass('is-invalid');
+                    $("#id_username_label").html('<span class="text-danger">This username already exists.</span>');
                 } else {
                     if($("#id_username").val() != ''){
-                        $("#id_username_label").html('<span class="text-success">This username is ready to go.</span>');
                         $("#id_username").removeClass('is-invalid');
                         $("#id_username").addClass('is-valid');
+                        $("#id_username_label").html('<span class="text-success">This username is ready to go.</span>');
                     }else{
-                        $("#id_username_label").html('<span class="text-danger">Username cannot be empty.</span>');
                         $("#id_username").removeClass('is-valid');
                         $("#id_username").addClass('is-invalid');
+                        $("#id_username_label").html('<span class="text-danger">Username cannot be empty.</span>');
                     }
                 }
             }
@@ -194,13 +194,13 @@
             dataType: 'json',
             success: function (data) {
                 if (data.is_valid) {
-                    $("#id_invitationcode_label").html('<span class="text-success">This Invitation Code is valid.</span>');
                     $("#id_invitationcodee").removeClass('is-invalid');
                     $("#id_invitationcode").addClass('is-valid');
+                    $("#id_invitationcode_label").html('<span class="text-success">This Invitation Code is valid.</span>');
                 } else {
-                    $("#id_invitationcode_label").html('<span class="text-danger">This Invitation Code is invalid.</span>');
                     $("#id_invitationcode").removeClass('is-valid');
                     $("#id_invitationcode").addClass('is-invalid');
+                    $("#id_invitationcode_label").html('<span class="text-danger">This Invitation Code is invalid.</span>');
                 }
             }
         });
@@ -216,6 +216,15 @@
             $("#id_password_label").html('<span class="text-danger">Wrong password format. The password length is 8-20, you need to include both numbers and letters.</span>');
         }
     });
+    $("#id_signup_form").change(function () {
+        setTimeout(function (){
+            if($("#id_signup_form").html().indexOf("is-invalid") > 0){
+                $("#submit_btn").attr("disabled", "disabled")
+            }else{
+                $("#submit_btn").removeAttr("disabled")
+            }
+        }, 100);
+    })
 </script>
 </body>
 </html>
