--- a/course/templates/account/password.html
+++ b/course/templates/account/password.html
@@ -114,6 +114,11 @@
 <script src="{% static "js/popper.min.js" %}"></script>
 <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script>
+    function isPasswordValid(password) {
+        var regex =/^(?!([a-zA-Z]+|\d+)$)[a-zA-Z\d]{8,20}$/;
+        return regex.test(password)
+    }
+
     function passwordCheck() {
         pw = document.getElementById('inputPassword1').value;
         check = document.getElementById('inputPassword2').value;
@@ -121,8 +126,8 @@
             alert('Password Not Match!');
         } else if (pw == '') {
             alert('Password can\'t be empty!');
-        } else if (pw.length < 8) {
-            alert('Password is too short!');
+        } else if (!isPasswordValid(pw)) {
+            alert('The password length is 8-20, you need to include both numbers and letters.');
         } else {
             document.forms["passwordForm"].submit();
         }
