Save Current Progress

--- a/course/templates/account/edit.html
+++ b/course/templates/account/edit.html
@@ -95,7 +95,7 @@
                 </div>
                 <div>
                     <label>Email</label>
-                    <input type="email" class="form-control" value="{{ user.email }}" disabled>
+                    <input type="email" class="form-control-plaintext" readonly value="{{ user.email }}">
                 </div>
                 <hr>
                 <input class="btn btn-primary btn-lg btn-block" type="submit" value="Save Change">
