--- a/course/templates/account/see.html
+++ b/course/templates/account/see.html
@@ -76,7 +76,7 @@
                             <div class="dropdown-divider"></div>
                         {% endif %}
                         <h6 class="dropdown-header">Account Relative</h6>
-                        <a class="dropdown-item active" href="{% url 'account_info_view' %}">Account Information</a>
+                        <a class="dropdown-item" href="{% url 'account_info_view' %}">Account Information</a>
                         <a class="dropdown-item" href="{% url 'logout_receiver' %}">Logout</a>
                     </div>
                 </li>
