--- a/course/templates/account/info.html
+++ b/course/templates/account/info.html
@@ -192,7 +192,7 @@
             <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
                 <div class="d-flex justify-content-between align-items-center w-100">
                     <strong class="text-gray-dark">My Comment(s)</strong>
-                    <a class="text-muted" href="#">Coming Soon</a>
+                    <a href="{% url 'view_comment' %}">Go</a>
                 </div>
                 <span class="d-block">我的评论</span>
             </div>
